solved overflow problem, footer and more

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     background-color: #FAFAFA;
     font-family: 'Red Hat Display', sans-serif;
     font-style: normal;
-    width: 1440px;
+    width:100%;
 }
 .logo{
     width: 119px;
@@ -25,10 +25,11 @@ body{
     display: flex;
     align-items: center;
     flex-direction: row;
-    column-gap: 88px;
+    justify-content: space-between;
     margin-top: 70px;
-    width: 100%;
     height: 358px;
+    margin-left: -32px;
+    margin-bottom: 110px;
 }
 .hero .info-content{
     width: 540px;
@@ -38,9 +39,7 @@ body{
     flex-direction: column;
     row-gap: 34px;
 }
-.hero img{
-    width: 362px;
-}
+
 .info-content h1{
     width: 445px;
     height: 128px;
@@ -100,7 +99,7 @@ body{
     position: relative;
     margin-bottom: 64px;
     margin-top: 110px;
-    left: 692px;
+  margin: auto;
     width: 56px;
 }
 .circle-with-bar> div:nth-of-type(1){
@@ -117,9 +116,9 @@ body{
     flex-direction: row;
     align-items: center;
     column-gap: 30px;
-    margin-left: 156px;
-    width: 1110px;
     margin-bottom: 80px;
+    margin-top: 64px;
+    justify-content: center;
 }
 .images img{
     width: 255px;
@@ -132,7 +131,7 @@ body{
     align-items: center;
     flex-direction: column;
     row-gap: 16px;
-    margin-left: 450px;
+    margin: auto;
 }
 .more-info > p:nth-of-type(1) {
     font-weight: 900;
@@ -165,9 +164,7 @@ body{
 footer{
     width: 100%;
     background-image:  url('./assets/desktop/image-footer.jpg');  
-    background-color:rgba(77, 150, 169); 
-    background-blend-mode: multiply;
-    opacity: 0.8;
+    box-shadow: inset 0 0 0 1000px rgba(76,150,169,0.95) ;
     background-size: cover;
     height: 308px;
     display: flex;
@@ -272,37 +269,29 @@ button{
     flex-direction: column;
     row-gap: 16px;
 }
- .img-tb-mb{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    column-gap: 10px;
-  }
-  .img-tb-mb img{
-    width: 48%;
-  }
+
   .circle-with-bar{
-    left: 160px;
-    margin-bottom: 64px;
+    margin: auto;
   }
   .images{
     width: 80%;
-    height: 364px;
+    height: 310px;
     display: grid;
     grid-template-columns: auto auto;
-    margin-left:24px;
+    margin-left:35px;
     margin-right: 24px;
     gap: 24px;
+    margin-top: 64px;
 }
 .images img{
     width:100%;
-    height:100%;
+    height:142px;
 }
 .more-info{
     width: 100%;
     margin-left: 0;
     row-gap: 0;
+    margin-bottom: 64px;
 }
 .more-info > p:nth-of-type(1) {
     height: 26px;
@@ -331,6 +320,10 @@ button{
     }
     .n-2{
         margin-bottom: 0;
+    }
+    #image-hero{
+        width:100%;
+        margin-left: -20px;
     }
     footer{
         display: flex;
@@ -384,13 +377,22 @@ button{
     row-gap: 48px;
     margin-top: 54px;
     margin-bottom: 64px;
+    width: 100%;
   }
+  .hero-tb-mb #image-hero{
+    width: 760px;
+    height: 303px;
+    margin-left: -20px;
+    margin-right: -30px;
+  }
+
   .hero-tb-mb .info-content{
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+
 .info-content h1{
     margin-bottom: 24px;
     width: 339px;
@@ -417,16 +419,7 @@ button{
     flex-direction: row;
     column-gap: 16px;
 }
- .img-tb-mb{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    column-gap: 10px;
-  }
-  .img-tb-mb img{
-    width: 48%;
-  }
+ 
   footer{
     display: flex;
     width: 100%;
@@ -464,5 +457,29 @@ footer p{
     padding: 0;
     background: #855FB1;
     border-radius: 29px;
+}
+.images{
+    margin-left: 0;
+    width: 100%;
+}
+.images{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 80px;
+    column-gap: 11px;
+
+}
+.images img{
+    width: 164px;
+    height: 156px;
+    border-radius: 5px;
+}
+.more-info{
+    display: flex;
+    align-items: center;
+    margin-left: 0;
+    margin-right:0;
+    width: 100%;
 }
 }
